# msd

./: Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
src/: de.rs  error.rs  escape.rs  lib.rs  ser.rs
src/de/: error.rs  mod.rs  position.rs
src/de/enum/: mod.rs
src/de/enum/variant/: access.rs  deserializer.rs  mod.rs
src/de/map/: field.rs  mod.rs  root.rs
src/de/parse/: mod.rs  tag.rs  tags.rs  utf8_char_width.rs  value.rs  values.rs
src/de/parse/value/: clean.rs  mod.rs  trim.rs
src/de/seq/: element.rs  field.rs  mod.rs  root.rs
src/de/struct/: field.rs  mod.rs  root.rs  value.rs
src/de/tuple/: element.rs  mod.rs
src/ser/: error.rs  escaped.rs  mod.rs  unimplemented.rs  write.rs
src/ser/map/: key.rs  mod.rs  value.rs
src/ser/map/key/: mod.rs  tuple.rs
src/ser/map/tag/: key.rs  mod.rs
src/ser/seq/: element.rs  mod.rs
src/ser/seq/tag/: element.rs  mod.rs
src/ser/struct/: field.rs  mod.rs
src/ser/struct/field/: mod.rs  parameter.rs  tuple.rs
src/ser/struct/field/map/: key.rs  mod.rs  value.rs
src/ser/struct/field/map/key/: mod.rs  tuple.rs
src/ser/struct/field/seq/: element.rs  mod.rs
src/ser/struct/field/tuple/: element.rs  mod.rs
src/ser/struct/field/tuple/element/: mod.rs  nested_tuple.rs
src/ser/tuple/: element.rs  key.rs  mod.rs  nested.rs
src/ser/tuple/element/: mod.rs  nested_tuple.rs
src/ser/tuple/tag/: element.rs  mod.rs  nested.rs
