[package]
name = "msd"
version = "0.1.0"
edition = "2021"

[dependencies]
lexical-core = "0.8.3"
serde = "1.0.136"

[build-dependencies]
serde = {version = "1.0.136", default-features = false}

[dev-dependencies]
claim = {git = "https://github.com/Anders429/rust-claim"}
serde_bytes = "0.11.5"
serde_derive = "1.0.136"
