[package]
name = "msd"
version = "0.3.0"
authors = ["Anders Evensen"]
edition = "2021"
rust-version = "1.58.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/msd"
description = "A library for reading and writing MSD files."
categories = ["encoding"]
keywords = ["msd", "stepmania", "simfile", "serde", "serialization"]

[dependencies]
arrayvec = "0.7.2"
either = "1.6.1"
itoa = "1.0.1"
num-traits = "0.2.14"
ryu = "1.0.9"
serde = "1.0.136"

[build-dependencies]
serde = {version = "1.0.136", default-features = false}

[dev-dependencies]
claims = "0.7.1"
serde_bytes = "0.11.5"
serde_derive = "1.0.136"
